--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://www.novypro.com/project/demand-and-power-exchange-report" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<h3>Indian Energy Exchange & Demand and Forecast Analysis of Power BI</h3>
+								<p>DAM and RTM Data Visualization using power bi day wise and also added areawise analysis and In another page there is analysis of load and forecasted load </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
